--- a/web/.classpath
+++ b/web/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsp-api-2.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-6.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Martín/git/digideal-ui/web/WebContent/WEB-INF/lib/primefaces-7.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.8.5.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/google-maps-services-0.2.7.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/okhttp-3.8.1.jar"/>
