--- a/web/src/config.properties
+++ b/web/src/config.properties
@@ -1,4 +1,4 @@
-DIGIDEAL_WEB_VERSION = 0.6.1-BETA
+DIGIDEAL_WEB_VERSION = 0.6.2-BETA
 BTC_PRICE_URL = http://trimatek.org:8282/digidata/rates/btc
 SERIAL_URL = http://trimatek.org:8282/digidata/serial/
 NAVIGATION_RESULT = result
@@ -8,8 +8,10 @@ NAVIGATION_FORM = form
 AGENT_NICK = @digideal
 AGENT_EMAIL = digideal.services@gmail.com
 AGENT_ADDRESS = 2MsHiZNZ3FpEPFTXVo7y3cCBKGQmHB37hbo
-BTC_TX_TRACK_TESTNET = https://test-insight.bitpay.com/tx/
+BTC_TX_TRACK_TESTNET = https://www.blockchain.com/btctest/tx/
 BTC_TX_TRACK_MAINNET = https://insight.bitpay.com/tx/
+BTC_FEE_URL = http://trimatek.org:8282/digidata/fee/fast
+BTC_FEE_HIST_URL = http://trimatek.org:8282/digidata/fee/fast/hist
 
 #DIGIDEAL_SOURCE_URL = http://localhost:9090/api/sources/
 #DIGIDEAL_TICKET_URL = http://localhost:9090/api/tickets/
