--- a/web/.classpath
+++ b/web/.classpath
@@ -4,7 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jsp-api-2.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Martín/git/digideal-ui/web/WebContent/WEB-INF/lib/primefaces-7.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/gson-2.8.5.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/google-maps-services-0.2.7.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/okhttp-3.8.1.jar"/>
@@ -31,5 +30,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/hsqldb-2.3.4.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/javax.faces-2.2.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commonmark-0.13.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/primefaces-7.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
